# galactic-explorer

./: .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss  package-lock.json  package.json  vite.config.ts
src/: App.tsx  app.rs  index.css  main.rs  main.tsx
src/api/: galaxy.api.ts  star-system.api.ts
src/models/: astronomical-object.ts  cataclysm-severity.ts  celestial-belt-details.ts  celestial-belt-type.ts  celestial-body-composition.ts  celestial-body-details.ts  celestial-body-size.ts  celestial-body-world-type.ts  celestial-body.ts  celestial-disk-type.ts  celestial-disk.ts  celestial-ring-composition.ts  celestial-ring-details.ts  celestial-ring-level.ts  debris-density.ts  galactic-hex.ts  galactic-map-division-level.ts  galactic-map-division.ts  galactic-neighborhood-density.ts  galactic-neighborhood.ts  galactic-region.ts  galaxy-category.ts  galaxy-satellites.ts  galaxy-special-trait.ts  galaxy-sub-category.ts  galaxy.ts  gas-giant-special-trait.ts  gaseous-body-details.ts  icy-body-details.ts  nebulae-apparent-size.ts  orbit.ts  orbital-point.ts  rotation-anomaly-speed.ts  settings.ts  space-coordinates.ts  star-age-difference.ts  star-luminosity-class.ts  star-metallicity-difference.ts  star-peculiarity.ts  star-spectral-type.ts  (+13 more)
src/store/: app.actions.ts  app.slice.ts  astronomical-object.actions.ts  astronomical-object.slice.ts  galaxy.actions.ts  galaxy.effects.ts  galaxy.slice.ts  settings.actions.ts  settings.slice.ts  star-system.actions.ts  star-system.effects.ts  star-system.slice.ts  store.ts
(+56 files in other folders)
