[package]
name = "galactic_explorer"
version = "0.1.0"
edition = "2021"
description = "A simple website made in Rust and Yew to chose settings and use planet-generator."
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
yew_icons = { version = "0.5", features = ["OcticonsChevronRight16", "OcticonsChevronDown16"] }
getrandom = { version = "0.2.8", features = ["js"] }
planet_generator = "0.0.1-pre-alpha"
